Source/WebCore/dom/Node.h
@@ -223,6 +223,10 @@ public:
     Node* lastDescendant() const;
     Node* firstDescendant() const;
 
+    // From the NonDocumentTypeChildNode - https://dom.spec.whatwg.org/#nondocumenttypechildnode
+    Element* previousElementSibling() const;
+    Element* nextElementSibling() const;
+
     // Other methods (not part of DOM)
 
     bool isElementNode() const { return getFlag(IsElementFlag); }
